@@ -5,6 +5,9 @@ update-manager (1:0.87) UNRELEASED; urgency=low
     LP: #145130)
   * support release-upgrades from dapper for architectures on
     ports.ubuntu.com
+  * UpdateManager/UpdateManager.py:
+    - remove the "from $version to $version" from the main 
+      list as this is duplicated information from the details tab
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 17 Dec 2007 14:56:12 +0100
 
